--- a/app/src/main/res/anim/slide_in_bottom.xml
+++ b/app/src/main/res/anim/slide_in_bottom.xml
@@ -2,8 +2,8 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:duration="200"
-        android:fromXDelta="10%p"
-        android:toXDelta="0" />
+        android:fromYDelta="10%p"
+        android:toYDelta="0" />
     <alpha
         android:duration="200"
         android:fromAlpha="0.0"
