Fixes in pagination

--- a/app/src/main/res/layout/item_pokemon_error_loading.xml
+++ b/app/src/main/res/layout/item_pokemon_error_loading.xml
@@ -29,14 +29,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_14sdp"
+            android:background="@android:color/transparent"
             android:onClick="@{onClick}"
-            android:text="@string/label_try_again"
+            android:padding="@dimen/_10sdp"
+            android:src="@drawable/ic_refresh"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/title"
             app:layout_constraintStart_toStartOf="@+id/title"
