--- a/app/src/main/res/layout/activity_pokemon_details.xml
+++ b/app/src/main/res/layout/activity_pokemon_details.xml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.lucasrodrigues.pokemonshowcase.view_model.GenerationPokemonViewModel" />
+            type="com.lucasrodrigues.pokemonshowcase.view_model.PokemonDetailsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/allPokemonRv"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:itemCount="9"
-            tools:listitem="@layout/item_pokemon" />
 
         <include
             android:id="@+id/loading"
@@ -34,7 +22,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:visibleIfLoading="@{viewModel.firstLoadState}" />
+            app:visibleIfLoading="@{viewModel.fetchingPokemonState}" />
 
         <include
             android:id="@+id/error"
@@ -45,6 +33,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:visibleIfError="@{viewModel.firstLoadState}" />
+            app:visibleIfError="@{viewModel.fetchingPokemonState}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
