--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -45,7 +45,7 @@
             android:layout_marginTop="@dimen/_6sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:maxLines="1"
-            android:text="@{item.name}"
+            android:text="@{item.pokemonName}"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="@dimen/_10ssp"
@@ -54,7 +54,7 @@
             app:layout_constraintEnd_toEndOf="@+id/reviewThumbnail"
             app:layout_constraintStart_toStartOf="@+id/reviewThumbnail"
             app:layout_constraintTop_toBottomOf="@+id/reviewThumbnail"
-            tools:text="Filme" />
+            tools:text="Pokemon" />
 
         <ImageButton
             android:id="@+id/imageButton"
