--- a/app/src/main/res/layout/component_error.xml
+++ b/app/src/main/res/layout/component_error.xml
@@ -8,13 +8,12 @@
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_14sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_14sdp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:text="@string/error_loading_data"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="@dimen/_13ssp"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tryAgain"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,8 +26,7 @@
         android:id="@+id/tryAgain"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_14sdp"
+        android:layout_marginTop="10dp"
         android:text="@string/label_try_again"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/title"
