--- a/app/src/main/res/layout/item_empty.xml
+++ b/app/src/main/res/layout/item_empty.xml
@@ -19,12 +19,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:text="@{item}"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/_16ssp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
