--- a/app/src/main/res/layout/item_pokemon.xml
+++ b/app/src/main/res/layout/item_pokemon.xml
@@ -25,11 +25,11 @@
 
         <ImageView
             android:id="@+id/reviewThumbnail"
-            android:layout_width="@dimen/_80sdp"
+            android:layout_width="100dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/_14sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_14sdp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="16dp"
             android:scaleType="centerCrop"
             app:layout_constraintDimensionRatio="w,1:1"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,13 +42,13 @@
             android:id="@+id/pokemonName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_6sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="14dp"
             android:maxLines="1"
             android:text="@{item.pokemonName}"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/_10ssp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/reviewThumbnail"
@@ -62,11 +62,11 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:onClick="@{onFavoriteClick}"
-            android:padding="@dimen/_8sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:padding="10dp"
             android:tint="#FF475B"
             app:icon="@{item.favorite ? @drawable/ic_favorite : @drawable/ic_not_favorite}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:src="@drawable/ic_favorite" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
