--- a/app/src/main/res/layout/item_pokemon_error_loading.xml
+++ b/app/src/main/res/layout/item_pokemon_error_loading.xml
@@ -17,13 +17,13 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_14sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_14sdp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="16dp"
             android:text="@string/error_loading_data"
             android:textAlignment="center"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/_13ssp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,10 +33,10 @@
             android:id="@+id/button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_14sdp"
+            android:layout_marginBottom="14dp"
             android:background="@android:color/transparent"
             android:onClick="@{onClick}"
-            android:padding="@dimen/_10sdp"
+            android:padding="10dp"
             android:src="@drawable/ic_refresh"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/title"
