--- a/app/src/main/res/layout/item_pokemon_placeholder.xml
+++ b/app/src/main/res/layout/item_pokemon_placeholder.xml
@@ -10,11 +10,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="@dimen/_80sdp"
+            android:layout_width="100dp"
             android:layout_height="0dp"
-            android:layout_marginStart="@dimen/_14sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_14sdp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginEnd="16dp"
             app:cardCornerRadius="5dp"
             app:cardElevation="0dp"
             app:layout_constraintDimensionRatio="w,1:1"
@@ -33,11 +33,11 @@
             android:id="@+id/movieTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_6sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="14dp"
             android:background="@color/light_gray"
             android:maxLines="1"
-            android:textSize="@dimen/_10ssp"
+            android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/cardView"
