--- a/app/src/main/res/layout/activity_pokemon_details.xml
+++ b/app/src/main/res/layout/activity_pokemon_details.xml
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:text="Número"
+                    android:text="@string/pokemon_number"
                     app:layout_constraintStart_toEndOf="@+id/pokemonIcon"
                     app:layout_constraintTop_toTopOf="@+id/pokemonIcon" />
 
@@ -59,7 +59,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Peso"
+                    android:text="@string/pokemon_weight"
                     app:layout_constraintStart_toStartOf="@+id/textView2"
                     app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -68,7 +68,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Altura"
+                    android:text="@string/pokemon_height"
                     app:layout_constraintStart_toStartOf="@+id/textView2"
                     app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
@@ -121,7 +121,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
-                    android:text="Sprites"
+                    android:text="@string/pokemon_sprites"
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -148,7 +148,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
-                    android:text="Tipos"
+                    android:text="@string/pokemon_types"
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -174,7 +174,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
-                    android:text="Atributos"
+                    android:text="@string/pokemon_stats"
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -200,7 +200,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
-                    android:text="Habilidades"
+                    android:text="@string/pokemon_abilities"
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -226,7 +226,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="16dp"
-                    android:text="Golpes"
+                    android:text="@string/pokemon_moves"
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
