--- a/app/src/main/res/layout/item_pokemon_card.xml
+++ b/app/src/main/res/layout/item_pokemon_card.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <import
+            alias="StringExtensions"
+            type="com.lucasrodrigues.pokemonshowcase.extensions.StringExtensionsKt" />
+
         <variable
             name="item"
             type="String" />
@@ -22,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:text="@{item}"
+            android:text="@{StringExtensions.normalizeToDisplay(item)}"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="14sp"
